src/snapshots/afrotd__parser__tests__rule_2.2.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 2
  - 1
title: Live Ball
text: "Ein Live Ball ist ein Ball im Spiel. Ein Pass, Kick oder Fumble, bei dem der Ball noch nicht den Boden berührt hat, ist ein Live Ball im Flug."
interpretations: []
