src/snapshots/afrotd__parser__tests__rule_2.2.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 2
  - 2
title: Dead Ball
text: "Ein Dead Ball ist ein Ball, der nicht im Spiel ist bzw. nicht gespielt wird."
interpretations: []
