src/snapshots/afrotd__parser__tests__rule_2.2.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 2
  - 4
title: Spielbereiter Ball
text: "Ein Dead Ball ist spielbereit, wenn:\n\ta) bei laufender 40-Sekunden Play Clock ein Schiedsrichter den Ball an einer Hash Mark oder zwischen den Hash Marks platziert und sich in Position befindet, um seinen Aufgaben nachzukommen.\n\tb) bei auf 25 Sekunden oder nach einer Verletzung oder einem Helmverlust eines Defense Team Spielers auf 40 Sekunden stehender Play Clock der Referee anpfeift und entweder „Game Clock starten“ (S2) oder „Ball spielbereit“ anzeigt (S1) (A.R. 4.1.4.I und 4.1.4.II)."
interpretations: []
