src/snapshots/afrotd__parser__tests__rule_2.21.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 21
  - 1
title: Scrimmage Down
text: "Ein Scrimmage Down ist die Aktion beider Teams während eines Downs, der mit einem Snap beginnt. Beachte: Ein Try Down ist ein Scrimmage Down, der beginnt, wenn der Referee den Ball freigibt (Regel 8.3.2.b)."
interpretations: []
