src/snapshots/afrotd__parser__tests__rule_2.21.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 21
  - 2
title: Scrimmage Line
text: "Die Scrimmage Line für jedes Team ist etabliert, wenn der Ball spielbereit ist. Sie ist die Meterlinie und ihre vertikale Fläche darüber, die den Punkt des Balles berührt, der am nächsten zur eigenen Endzone eines Teams liegt."
interpretations: []
