src/snapshots/afrotd__parser__tests__rule_2.24.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 24
  - 1
title: Serie
text: "Eine Serie beinhaltet bis zu vier aufeinander folgende Downs, die jeweils mit einem Snap beginnen (Regel 5.1.1)."
interpretations: []
