src/snapshots/afrotd__parser__tests__rule_2.24.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 24
  - 2
title: Ballbesitz-Serie
text: Eine Ballbesitz-Serie ist ein fortgesetzter Ballbesitz eines Teams in einer Extraperiode (Regel 3.1.3). Diese kann eine oder mehrere Serien beinhalten.
interpretations: []
